--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div style = "
-    background-color: #f1f1f1;
+    background-color: #FF0000;
     text-align:center;
     padding:40px">
       <img src = "https://s1.328888.xyz/2022/09/08/9hiM0.jpg" alt = CharlesTS width = "80px" height = "80px"> 
